# MCP-Oreilly-1

./: README.md  pom.xml  pyproject.toml
java/: pom.xml
java/src/main/java/com/example/weather/: WeatherMcpServer.java
node/: package.json  tsconfig.json
node/src/: index.ts
node/sysinfo/: package.json
node/sysinfo/src/: index.ts  system-info-collector.ts
node/weather/: package.json
node/weather/src/: index.ts
postgreSQL/: createdatabase.sql  shoe_store_schema.sql
python/: README.md
python/weather_mcp/: __init__.py  server.py
src/main/java/com/example/weather/: WeatherMcpServer.java
