[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weather_mcp_python"
version = "0.1.0"
description = "Weather MCP Server - A Model Context Protocol server that provides weather information"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
weather-mcp = "weather_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["weather_mcp"]
